--- a/pub/index.html
+++ b/pub/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE HTML>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 
+<!-- TODO: put a nice title in the next line -->
+<title>WebSDR in JO51EO</title>
+
+<!--#include file="websdr-head.html"-->
+</head>
+
+<body onload=bodyonload()>
+
+<!-- TODO: put something nice here that explains what this page is, where your receiver is, your contact information, etc. -->
+<!-- Please include some reference to the websdr.org side, so users of your radio can find out more about the system. -->
+<font size="-1">This is a WebSDR receiver, located in JO51EO, 335m ASL. Operated by DL8AAP, e-mail dl8aap@koch-carsten.de. If you experience problems (sound, waterfall) please read the FAQs first <a href="http://www.websdr.org/faq.html">http://www.websdr.org/faq.html</a><br>
+More information about the WebSDR project itself can be found on <a href="http://www.websdr.org">http://www.websdr.org</a>.
+<!--<br><br>
+<div style="background-color: #FFFF99; border: 1px solid; float: left; padding: 2em;">
+
+<b>As we are in an experimental state concerning hardware and software equipment please be patient with the system and with us.</b>
+<p>
+<h2>
+The prevailing audio stuttering can be avoided temporarily by switching off the waterfall diagram. </br>Simply choose the option "blind"
+</h2>
+</p>
+</div>
+<p>
+</p>
+-->
+<p>
+<b><br>Note:</b> you need both <i>Java</i> and <i>JavaScript</i> enabled for this
+page to work properly. If you don't hear anything, probably Java 
+is disabled or its version is too old (i.e., pre-1.4.2).
+<hr>
+</font>
+<p>
+<font size="-1">Please support this project with a small donation so we can maintain old and buy better hardware</font>
+<form action="https://www.paypal.com/donate" method="post" target="_blank">
+<input type="hidden" name="hosted_button_id" value="467TW7B9KK4B4" />
+<input type="image" src="https://www.paypalobjects.com/en_US/DK/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_DE/i/scr/pixel.gif" width="1" height="1" />
+</form>
+<hr>
+
+<!--#include file="websdr-controls.html"-->
+
+</body>
+</html>
